// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart title Can render a chart title component 1`] = `
<div>
  <div
    class="o-spreadsheet"
  >
    <div
      class="o-section o-chart-title pb-0"
    >
      <div
        class="o-section-title"
      >
        
        Title
      </div>
      
      
      <div
        class="o-input-custom"
      >
        <input
          class="o-input o-optional"
          placeholder="Add a title"
          type="text"
        />
      </div>
      <div
        class="o-section pt-0 px-0"
      >
        
        <div
          class="o-chart-title-designer position-relative d-flex align-items-center"
        >
          <span
            class="o-menu-item-button o-hoverable-button"
            title="Bold"
          >
            <span>
              <svg
                class="o-icon"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 6.5C13.5 4.57 11.93 3 10 3H4.5v12h6.25c1.79 0 3.25-1.46 3.25-3.25 0-1.3-.77-2.41-1.87-2.93.83-.58 1.37-1.44 1.37-2.32M9.5 5c.83 0 1.5.67 1.5 1.5S10.33 8 9.5 8h-2V5h2m-2 8v-3H10c.83 0 1.5.67 1.5 1.5S10.83 13 10 13H7.5"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <span
            class="o-menu-item-button o-hoverable-button"
            title="Italic"
          >
            <span>
              <svg
                class="o-icon"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 3v2h2.58l-3.66 8H3v2h8v-2H8.42l3.66-8H15V3"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <span
            class="o-menu-item-button o-hoverable-button"
            title="Horizontal alignment"
          >
            <span>
              
              
              <svg
                class="o-icon align-left"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 16h10v-2H2v2M12 6H2v2h10V6M2 2v2h14V2H2m0 10h14v-2H2v2"
                  fill="currentColor"
                />
              </svg>
              
            </span>
            <div
              class="o-icon fa-small"
            >
              <i
                class="fa fa-caret-down"
              />
            </div>
            
          </span>
          
          <div
            class="o-color-picker-widget"
          >
            <span
              class="o-color-picker-button o-hoverable-button o-menu-item-button"
            >
              <span
                style="border-bottom-style: hidden"
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 1H8L3.5 13h2l1.12-3h4.75l1.12 3h2L10 1ZM7.38 8 9 3.67 10.62 8H7.38"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            
          </div>
          
          <div
            class="flex-grow-1"
          />
          <label
            class="o-checkbox"
          >
            <input
              class="align-middle"
              type="checkbox"
            />
            Use cell reference
            
          </label>
          
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Chart title Can render correctly with selection input for chart title 1`] = `
<div>
  <div
    class="o-spreadsheet"
  >
    <div
      class="o-section o-chart-title pb-0"
    >
      <div
        class="o-section-title"
      >
        
        Title
      </div>
      
      <div
        class="o-selection"
      >
        <div
          class="o-selection-input d-flex flex-row"
        >
          <div
            class="position-relative w-100"
          >
            <input
              class="w-100 o-required"
              spellcheck="false"
              style="color: #000;"
              type="text"
            />
            
          </div>
          
        </div>
        
        
        <div
          class="o-selection-input d-flex flex-row"
        >
          
          
          
        </div>
      </div>
      
      <div
        class="o-section pt-0 px-0"
      >
        
        <div
          class="o-chart-title-designer position-relative d-flex align-items-center"
        >
          <span
            class="o-menu-item-button o-hoverable-button"
            title="Bold"
          >
            <span>
              <svg
                class="o-icon"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 6.5C13.5 4.57 11.93 3 10 3H4.5v12h6.25c1.79 0 3.25-1.46 3.25-3.25 0-1.3-.77-2.41-1.87-2.93.83-.58 1.37-1.44 1.37-2.32M9.5 5c.83 0 1.5.67 1.5 1.5S10.33 8 9.5 8h-2V5h2m-2 8v-3H10c.83 0 1.5.67 1.5 1.5S10.83 13 10 13H7.5"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <span
            class="o-menu-item-button o-hoverable-button"
            title="Italic"
          >
            <span>
              <svg
                class="o-icon"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 3v2h2.58l-3.66 8H3v2h8v-2H8.42l3.66-8H15V3"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <span
            class="o-menu-item-button o-hoverable-button"
            title="Horizontal alignment"
          >
            <span>
              
              
              <svg
                class="o-icon align-left"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 16h10v-2H2v2M12 6H2v2h10V6M2 2v2h14V2H2m0 10h14v-2H2v2"
                  fill="currentColor"
                />
              </svg>
              
            </span>
            <div
              class="o-icon fa-small"
            >
              <i
                class="fa fa-caret-down"
              />
            </div>
            
          </span>
          
          <div
            class="o-color-picker-widget"
          >
            <span
              class="o-color-picker-button o-hoverable-button o-menu-item-button"
            >
              <span
                style="border-bottom-style: hidden"
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 1H8L3.5 13h2l1.12-3h4.75l1.12 3h2L10 1ZM7.38 8 9 3.67 10.62 8H7.38"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            
          </div>
          
          <div
            class="flex-grow-1"
          />
          <label
            class="o-checkbox"
          >
            <input
              class="align-middle"
              type="checkbox"
            />
            Use cell reference
            
          </label>
          
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;
